--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "mysql2": "^3.11.0"
   }
 }
